         instead of the filenames as default.
         Also pmenu expects a sorted list of the real filenames in the
         "SortOrder" entry of the ".directory" file now for a user
         defined sort order.
	 This requires some changes to kmenuedit.
       - bugfix for occassional crashes with fast addding/removing of windows
    Patchlevel 4:
       - paints scaled minicions everywhere, even in the system menu.
         I thought this looks ugly, but Torben requested this feature :-)
       - empty "Personal" folder is ignored
       - weird taskbar bug (wrong window) fixed. Thanks to Stephan Kulow
         for bug hunting.
       - active taskbar button painted down (for Stephan Kulow :-)
       - Fix for qt-tooltips on taskbarbuttons
       - fix for big icons on panel buttons
    Patchlevel 3:
       - fixed the dragging of data onto panel buttons
       - no more need for the kdelnk suffix (but mimetype)
       - several small fixes
       - TaskbarPosition=top_left as default
    Patchlevel 2:
       - context menu improved/fixed
    Patchlevel 1:
       - Alt-F1 global shortcut for the system menu


==================kpanel-0.17 has been almost a rewrite============

Major visible changes:
    - no more graphical configuration (this is done by kcc)
       (not true, but will be removed soon)
    - works with the modern kwm II now (kwm >= 0.10)
    - uses Christoph Neerfeld's pmenu class from ktaskbar
      => item order can be modified via Chris' kmenuedit
    - works (only) with qt-1.3

Major unsibible changes: 
    - cleaner code :-)

====================================================================


since kpanel-0.16:

- visual feedback (waitCursor) when invoking applications via buttons.
- should ignore non-readable files and directories

NOTE: kpanel needs a kwm>=0.8pl15 now

- bugfixes
- no more special menufont
- handles general change requests from kdisplay now

- taskbar and windowlist sorted in virtual desktops