@@ -10,6 +10,7 @@ In 0.1:
 patchlevel 4:
        - RMB somewhat adapted to the KDE progress (KFM still not
          works)
+       - uses kprocess for execute
 
 patchlevel 3:
        - qt-1.3
